// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Options: YAML should prepend frontmatter 1`] = `
"---
title: SomeInterface
layout: blog
navOrder: 1
hide: true
tagOne: 0
tagTwo: "'Frontmatter' tag"
---

# Interface: SomeInterface
"
`;

exports[`Options: YAML should prepend frontmatter for readme page 1`] = `
"---
title: typedoc-plugin-frontmatter
layout: blog
navOrder: 1
hide: true
onReadme: true
---

# The Readme
"
`;

exports[`Options: YAML should prepend frontmatter to index page 1`] = `
"---
title: typedoc-plugin-frontmatter
layout: blog
navOrder: 1
hide: true
onIndex: true
---

# typedoc-plugin-frontmatter

## Interfaces

- [SomeInterface](interfaces/SomeInterface.md)
"
`;

exports[`Options: YAML should prepend frontmatter with preserved tags 1`] = `
"---
title: SomeInterface
layout: blog
navOrder: 1
hide: true
tagOne: 0
tagTwo: "'Frontmatter' tag"
---

# Interface: SomeInterface

## Tag One

0

## Tag Two

'Frontmatter' tag
"
`;
